--- a/jam-simp.html
+++ b/jam-simp.html
@@ -533,7 +533,7 @@
 					.reveal(2000)
 				    .start()
 				    .set({
-				        characters: '¦¦¦ /<¦¦¦ ¦¦¦¦/ ¦/¦ ¦¦/¦¦ ¦¦¦¦ ¦¦¦ ¦¦¦¦ ¦¦¦¦',
+				        characters: 'Â¦Â¦Â¦ /<Â¦Â¦Â¦ Â¦Â¦Â¦Â¦/ Â¦/Â¦ Â¦Â¦/Â¦Â¦ Â¦Â¦Â¦Â¦ Â¦Â¦Â¦ Â¦Â¦Â¦Â¦ Â¦Â¦Â¦Â¦',
 				        speed: 150
 				    });
 				    localStorage.setItem("manualColor", "#0079FF");
@@ -878,19 +878,19 @@
 					txt2=txt;
 				}
 				else if(H<9){
-					txt='Good Morning Kembu:)';
+					txt='Good Morning feby:)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<12){
-					txt='Be Happy Today mbu:)';
+					txt='Be Happy Today feby:)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
 				}
 				else if(H<16){
-					txt='Good Afternoon kembu :)';
+					txt='Good Afternoon feby :)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
@@ -902,7 +902,7 @@
 					txt2=txt;
 				}
 				else if(H<23){
-					txt='Good Evening kembu:)';
+					txt='Good Evening feby:)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
@@ -982,7 +982,7 @@
 			  },
 			  {
 			    "quote": "You don't lose, You learn",
-			    "source": "Risma Nugraha"
+			    "source": "Risman Nugraha"
 			  },
 			  {
 			    "quote": "Masa lalu dan frustasi merupakan fondasi dasar untuk menciptakan kembali kehidupan baru yang lebih baik",
